# goiaba-alexandre-solano-correia

./: goiaba_api.sln
goiaba_api/: Program.cs  WeatherForecast.cs  appsettings.json  docker-compose.yml
goiaba_api.Teste/: UnitTest1.cs  UserModelTest.cs  UserRepositoryTest.cs
goiaba_api.Teste/Services/: GoiabaAPIRepository.cs  IGoiabaAPIRepository.cs
goiaba_api/Controllers/: UsersController.cs  WeatherForecastController.cs
goiaba_api/Migrations/: 20220822154636_CreateTableUser.Designer.cs  20220822154636_CreateTableUser.cs  20220822201418_CreateTableUser.Designer.cs  20220822201418_CreateTableUser.cs  AppDbContextModelSnapshot.cs
goiaba_api/Models/: AppDbContext.cs  IUserRepository.cs  UserModel.cs  UserRepository.cs
goiaba_api/Properties/: launchSettings.json
goiaba_api/Services/: DatabaseManagementService.cs
goiaba_api/goiaba_api/: Dockerfile  docker-compose.yml
goiaba_api/goiaba_api.Teste/: UserModelTest.cs  goiaba_api.Teste.csproj
goiaba_api/goiaba_api.Teste/Services/: IGoiabaAPIRepository.cs
goiaba_api/goiaba_api/Migrations/: 20220822201418_CreateTableUser.cs
goiaba_api/goiaba_api/Models/: IUserRepository.cs  UserModel.cs  UserRepository.cs
goiaba_api/goiaba_api/Services/: DatabaseManagementService.cs
goiaba_bolsa/: Application.cpp  Application.h  CMakeLists.txt  configServer.cfg  ordermatch.cpp
goiaba_bolsa/quickfix/include/quickfix/: stdafx.h
goiaba_mobile/: README.md  goiaba_mobile.sln
goiaba_mobile/goiaba_mobile.Teste/: GoiabaAPITest.cs  UserModelTeste.cs  UserRepositoryTest.cs  goiaba_mobile.Teste.csproj
(+36 files in other folders)
